update for local testing

--- a/conf/dev.config
+++ b/conf/dev.config
@@ -1,19 +1,12 @@
 params {
-    outdir = "/work/results"
+    outdir = "results/"
+    local_location = "/work/full_data/" // single_sample OR multiple_samples
 }
 
 process {
 
     errorStrategy = { task.attempt < 3 ? 'retry' : 'ignore' }
 
-    executor = 'k8s'
-
-    withName:
-    ".*" {
-        container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
-        cpus = 4
-        memory = 8.GB
-    }
 }
 
 k8s {
@@ -27,3 +20,38 @@ k8s {
     storageMountPath = '/work'
 
 }
+
+//=========================================
+// Kubernetes
+//=========================================
+
+
+// params {
+//     outdir = "/work/results"
+// }
+
+// process {
+
+//     errorStrategy = { task.attempt < 3 ? 'retry' : 'ignore' }
+
+//     executor = 'k8s'
+
+//     withName:
+//     ".*" {
+//         container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
+//         cpus = 4
+//         memory = 8.GB
+//     }
+// }
+
+// k8s {
+
+//     namespace = 'nfkube'
+
+//     serviceAccount = 'nfkubelaunchersa'
+
+//     storageClaimName = 'nfkubevolumeclaim'
+
+//     storageMountPath = '/work'
+
+// }
