--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -7,13 +7,13 @@ run_type = "samplesheet" // OR "sra" OR "local"
 
 input_samplesheet = "${projectDir}/samplesheet.csv"
 
-local_location = "/work/data/multiple_samples" // single_sample OR multiple_samples
+local_location = "data/full_data" // single_sample OR multiple_samples
 
 analysis_mode = "parallel" // OR "batch"
 
 library_name = "illumina"
 
-outdir = "/work/results"
+outdir = "results"
 
 user = "root"
 
@@ -24,6 +24,7 @@ mtbseq_path = "MTBseq"
 
 cohort_tsv = "${params.project}_cohort.tsv"
 
+gatk38_jar = "${projectDir}/resources/GenomeAnalysisTK.jar"
 
 //NOTE: Setting this OPTION will skip all filtering steps and report the calculated information for all positions in the input file.
 // The all_vars only needs to be activated in MTBseq. But in mtbseq-nf we'll specify it as false
