--- a/conf/stub.config
+++ b/conf/stub.config
@@ -1,5 +1,7 @@
-// params {
+params {
 
-// local_location = "${projectDir}/data/mock_data" // single_sample OR multiple_samples
+    local_location = "${projectDir}/data/mock_data" // single_sample OR multiple_samples
 
-// }
+    gatk38_jar = "${projectDir}/data/mock_data/GenomeAnalysisTK.jar"
+
+}
