update tbbstats results dir

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -192,8 +192,8 @@ TBVARIANTS {
 }
 
 TBSTATS {
-    project = "${params.outdir}/tbstats"
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbstats"
+    project = params.project
     save_mode = 'copy'
     should_publish = true
 
