Update the publish location for tbstrains

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -241,9 +241,9 @@ TBJOIN {
 
 TBSTRAINS {
     results_dir = "${params.outdir}/tbstrains"
-    results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
+    project = params.project
 
 
     all_vars = params.all_vars
