update default analysis

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -3,7 +3,7 @@ ncbi_api_key = ""
 
 genomeIds = ["ERR841438", "ERR841440"]
 
-run_type = "samplesheet" // OR "sra" OR "local"
+run_type = "local" // OR "sra" OR "samplesheet"
 
 input_samplesheet = "${projectDir}/samplesheet.csv"
 
@@ -329,6 +329,6 @@ TBFULL {
 
 RENAME_FILES {
     results_dir = "${params.outdir}/rename_files"
-    save_mode = 'symlink'
+    save_mode = 'copy'
     should_publish = true
 }
