Add tbfull to config

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -68,5 +68,12 @@ process {
         memory = "15 GB"
     }
 
+    withName:
+    "TBFULL" {
+        cpus = 8
+        memory = "15 GB"
+    }
+
+
 }
 
