--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -9,7 +9,8 @@ input_samplesheet = "${projectDir}/samplesheet.csv"
 
 local_location = "data/full_data" // single_sample OR multiple_samples
 
-analysis_mode = "parallel" // OR "batch"
+//NOTE: Change the default to "parallel" after testing is done
+analysis_mode = "batch" // OR "parallel"
 
 library_name = "illumina"
 
