update global params and server config

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -69,7 +69,7 @@ distance = 12
 
 // The OPTION sets the maximum number of CPUs to use within the pipeline.
 // You can use more than one core in order to execute the pipeline faster. 8 is the current maximum.
-threads = 4
+threads = 8
 
 ref_and_indexes_path = "${projectDir}/data/references/ref/"
 
@@ -109,13 +109,13 @@ TBBWA {
     save_mode = 'copy'
     should_publish = true
 
-    cpus = params.threads
+    // cpus = params.threads
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 }
 
@@ -124,13 +124,13 @@ TBREFINE {
     save_mode = 'copy'
     should_publish = true
 
-    cpus = params.threads
+    // cpus = params.threads
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 }
@@ -140,13 +140,13 @@ TBPILE {
     save_mode = 'copy'
     should_publish = true
 
-    cpus = params.threads
+    // cpus = params.threads
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 
@@ -157,15 +157,15 @@ TBLIST {
     save_mode = 'copy'
     should_publish = true
 
-    cpus = params.threads
+    // cpus = params.threads
 
-    minbqual = params.minbqual
+    // minbqual = params.minbqual
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 }
@@ -175,19 +175,19 @@ TBVARIANTS {
     save_mode = 'copy'
     should_publish = true
 
-    all_vars = params.all_vars
-    snp_vars = params.snp_vars
-    lowfreq_vars = params.lowfreq_vars
-    mincovf = params.mincovf
-    mincovr = params.mincovr
-    minphred = params.minphred
-    minfreq = params.minfreq
+    // all_vars = params.all_vars
+    // snp_vars = params.snp_vars
+    // lowfreq_vars = params.lowfreq_vars
+    // mincovf = params.mincovf
+    // mincovr = params.mincovr
+    // minphred = params.minphred
+    // minfreq = params.minfreq
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 }
@@ -199,19 +199,19 @@ TBSTATS {
     should_publish = true
 
 
-    all_vars = params.all_vars
-    snp_vars = params.snp_vars
-    lowfreq_vars = params.lowfreq_vars
-    mincovf = params.mincovf
-    mincovr = params.mincovr
-    minphred = params.minphred
-    minfreq = params.minfreq
+    // all_vars = params.all_vars
+    // snp_vars = params.snp_vars
+    // lowfreq_vars = params.lowfreq_vars
+    // mincovf = params.mincovf
+    // mincovr = params.mincovr
+    // minphred = params.minphred
+    // minfreq = params.minfreq
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 }
@@ -222,19 +222,19 @@ TBJOIN {
     should_publish = true
     project = params.project
 
-    all_vars = params.all_vars
-    snp_vars = params.snp_vars
-    lowfreq_vars = params.lowfreq_vars
-    mincovf = params.mincovf
-    mincovr = params.mincovr
-    minphred = params.minphred
-    minfreq = params.minfreq
+    // all_vars = params.all_vars
+    // snp_vars = params.snp_vars
+    // lowfreq_vars = params.lowfreq_vars
+    // mincovf = params.mincovf
+    // mincovr = params.mincovr
+    // minphred = params.minphred
+    // minfreq = params.minfreq
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 
@@ -247,19 +247,19 @@ TBSTRAINS {
     project = params.project
 
 
-    all_vars = params.all_vars
-    snp_vars = params.snp_vars
-    lowfreq_vars = params.lowfreq_vars
-    mincovf = params.mincovf
-    mincovr = params.mincovr
-    minphred = params.minphred
-    minfreq = params.minfreq
+    // all_vars = params.all_vars
+    // snp_vars = params.snp_vars
+    // lowfreq_vars = params.lowfreq_vars
+    // mincovf = params.mincovf
+    // mincovr = params.mincovr
+    // minphred = params.minphred
+    // minfreq = params.minfreq
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 }
@@ -272,17 +272,17 @@ TBAMEND {
     should_publish = true
 
 
-    window = params.window
-    unambig = params.unambig
-    minfreq = params.minfreq
-    minphred = params.minphred
-    mincovr = params.mincovr
+    // window = params.window
+    // unambig = params.unambig
+    // minfreq = params.minfreq
+    // minphred = params.minphred
+    // mincovr = params.mincovr
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 }
@@ -293,13 +293,13 @@ TBGROUPS {
     should_publish = true
     project = params.project
 
-    distance = params.distance
+    // distance = params.distance
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 }
@@ -309,21 +309,21 @@ TBFULL {
     save_mode = 'copy'
     should_publish = true
 
-    minbqual = params.minbqual
-    mincovf = params.mincovf
-    mincovr = params.mincovr
-    minphred = params.minphred
-    minfreq = params.minfreq
-    unambig = params.unambig
-    window = params.window
-    distance = params.distance
+    // minbqual = params.minbqual
+    // mincovf = params.mincovf
+    // mincovr = params.mincovr
+    // minphred = params.minphred
+    // minfreq = params.minfreq
+    // unambig = params.unambig
+    // window = params.window
+    // distance = params.distance
 
 
-    // ref = params.ref
-    resilist = params.resilist
-    intregions = params.intregions
-    categories = params.categories
-    basecalib = params.basecalib
+    // // ref = params.ref
+    // resilist = params.resilist
+    // intregions = params.intregions
+    // categories = params.categories
+    // basecalib = params.basecalib
 
 
 }
