--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,7 @@ profiles {
     gls { includeConfig 'conf/gcp.config' }
     azureBatch { includeConfig 'conf/azure.config' }
     awsBatch { includeConfig 'conf/aws.config' }
+    server { includeConfig 'conf/server.config' }
 
 }
 
