accommodating params for the new modules

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -333,3 +333,15 @@ RENAME_FILES {
     save_mode = 'copy'
     should_publish = true
 }
+
+FASTQC {
+    results_dir = "${params.outdir}/fastqc"
+    save_mode = 'copy'
+    should_publish = true
+}
+
+MULTIQC {
+    results_dir = "${params.outdir}/multiqc"
+    save_mode = 'copy'
+    should_publish = true
+}
