accommodating `conda` and `docker` instructions for the new modules

--- a/conf/conda.config
+++ b/conf/conda.config
@@ -3,4 +3,14 @@ process {
     ".*" {
         conda = 'bioconda::mtbseq=1.0.3'
     }
+
+    withName:
+    'FASTQC' {
+        conda = 'bioconda::fastqc=0.11.9'
+    }
+
+    withName:
+    'MULTIQC' {
+        conda = 'bioconda::multiqc=1.9'
+    }
 }
