--- a/conf/docker.config
+++ b/conf/docker.config
@@ -5,4 +5,15 @@ process {
     ".*" {
         container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
     }
+
+    withName:
+    'FASTQC' {
+        container = 'quay.io/biocontainers/fastqc:0.11.9--0'
+    }
+
+    withName:
+    'MULTIQC' {
+        container = 'quay.io/biocontainers/multiqc:1.9--pyh9f0ad1d_0'
+    }
+
 }
