adding `skip_qc` parameter

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -99,7 +99,7 @@ categories = "${projectDir}/data/references/cat/MTB_Gene_Categories.txt"
 // This OPTION specifies a file for base quality recalibration. The list must be in VCF format and should contain known SNPs.
 basecalib = "${projectDir}/data/references/res/MTB_Base_Calibration_List.vcf"
 
-
+skip_qc =  false
 
 
 
