change the default library name

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -12,7 +12,7 @@ local_location = "data/full_data" // single_sample OR multiple_samples
 //NOTE: Change the default to "parallel" after testing is done
 analysis_mode = "batch" // OR "parallel"
 
-library_name = "illumina"
+library_name = "lib"
 
 outdir = "results"
 
@@ -25,7 +25,7 @@ mtbseq_path = "MTBseq"
 
 cohort_tsv = "${params.project}_cohort.tsv"
 
-gatk38_jar = "${projectDir}/resources/GenomeAnalysisTK.jar"
+gatk38_jar = "${projectDir}/resources/GenomeAnalysisTK-3.8-0-ge9d806836/GenomeAnalysisTK.jar"
 
 //NOTE: Setting this OPTION will skip all filtering steps and report the calculated information for all positions in the input file.
 // The all_vars only needs to be activated in MTBseq. But in mtbseq-nf we'll specify it as false
