fix the file pattern and update GATK locatoin

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -2,17 +2,17 @@ docker.enabled = true
 
 process {
     withName:
-    ".*" {
+    "TB.*" {
         container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
     }
 
     withName:
-    'FASTQC' {
+    'FASTQC.*' {
         container = 'quay.io/biocontainers/fastqc:0.11.9--0'
     }
 
     withName:
-    'MULTIQC' {
+    'MULTIQC.*' {
         container = 'quay.io/biocontainers/multiqc:1.9--pyh9f0ad1d_0'
     }
 
