optimize the server configs

--- a/conf/server.config
+++ b/conf/server.config
@@ -1,19 +1,8 @@
-docker.enabled = true
-
-
-params {
-    outdir = "${baseDir}/results"
-    gatk38_jar = "${baseDir}/resources/GenomeAnalysisTK.jar"
-    reads = "${baseDir}/data/full_data/*_{R1,R2}*fastq.gz"
-
-    distance = 5
-}
-
-
 process {
     withName:
-    ".*" {
-        cpus = 16
-        container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
+    "TBFULL" {
+        cpus = 8
+        memory = "38 GB"
     }
 }
+
