--- a/conf/standard.config
+++ b/conf/standard.config
@@ -10,43 +10,43 @@ process {
     withName:
     "TBREFINE" {
         cpus = 8
-        memory = "15 GB"
+        memory = 8.GB
     }
 
     withName:
     "TBBWA" {
-        cpus = 8
-        memory = "15 GB"
+        cpus = 4
+        memory = 8.GB
     }
 
     withName:
     "TBVARIANTS" {
-        cpus = 8
-        memory = "15 GB"
+        cpus = 4
+        memory = 8.GB
     }
 
     withName:
     "TBPILE" {
-        cpus = 8
-        memory = "15 GB"
+        cpus = 4
+        memory = 4.GB
     }
 
     withName:
     "TBSTRAINS" {
-        cpus = 8
-        memory = "15 GB"
+        cpus = 4
+        memory = 4.GB
     }
 
     withName:
     "TBLIST" {
         cpus = 8
-        memory = "15 GB"
+        memory = 15.GB
     }
 
     withName:
     "TBSTATS" {
-        cpus = 8
-        memory = "15 GB"
+        cpus = 4
+        memory = 4.GB
     }
 
     withName:
@@ -57,20 +57,20 @@ process {
 
     withName:
     "TBGROUPS" {
-        cpus = 8
-        memory = "15 GB"
+        cpus = 4
+        memory = 4.GB
     }
 
     withName:
     "TBJOIN" {
-        cpus = 8
-        memory = "15 GB"
+        cpus = 4
+        memory = 4.GB
     }
 
     withName:
     "TBFULL" {
         cpus = 8
-        memory = "15 GB"
+        memory = 35.GB
     }
 
 
