adding a docker container for the module

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -16,4 +16,8 @@ process {
         container = 'quay.io/biocontainers/multiqc:1.9--pyh9f0ad1d_0'
     }
 
+    withName:
+    'DOWNLOAD_GATK_JAR' {
+        container = 'alpine:3.14'
+    }
 }
