adding `gatk_jar_link` to global params

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -28,6 +28,8 @@ cohort_tsv = "${params.project}_cohort.tsv"
 
 gatk38_jar = "${projectDir}/resources/GenomeAnalysisTK-3.8-0-ge9d806836/GenomeAnalysisTK.jar"
 
+gatk_jar_link = "https://storage.googleapis.com/gatk-software/package-archive/gatk/GenomeAnalysisTK-3.8-0-ge9d806836.tar.bz2"
+
 //NOTE: Setting this OPTION will skip all filtering steps and report the calculated information for all positions in the input file.
 // The all_vars only needs to be activated in MTBseq. But in mtbseq-nf we'll specify it as false
 all_vars = false
