unify the conda environments

--- a/conf/conda.config
+++ b/conf/conda.config
@@ -1,16 +1,6 @@
 process {
     withName:
     ".*" {
-        conda = 'bioconda::mtbseq=1.0.3'
-    }
-
-    withName:
-    'FASTQC' {
-        conda = 'bioconda::fastqc=0.11.9'
-    }
-
-    withName:
-    'MULTIQC' {
-        conda = 'bioconda::multiqc=1.9'
+        conda = 'bioconda::mtbseq=1.0.3 bioconda/linux-64::gatk=3.8.0 bioconda::fastqc=0.11.9 bioconda::multiqc=1.9'
     }
 }
