remove the requirement of local_location

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -7,7 +7,7 @@ run_type = "local" // OR "sra" OR "samplesheet"
 
 input_samplesheet = "${projectDir}/samplesheet.csv"
 
-local_location = "data/full_data" // single_sample OR multiple_samples
+reads = "data/full_data/*_{R1,R2}*fastq.gz"
 
 //NOTE: Change the default to "parallel" after testing is done
 analysis_mode = "batch" // OR "parallel"
@@ -15,6 +15,7 @@ analysis_mode = "batch" // OR "parallel"
 library_name = "lib"
 
 outdir = "results"
+
 
 user = "root"
 
