--- a/conf/standard.config
+++ b/conf/standard.config
@@ -1,11 +1,5 @@
-params {
-    outdir = "${baseDir}/results"
-    reads = "${baseDir}/data/full_data/*_{R1,R2}*fastq.gz"
-}
-
 process {
-    errorStrategy = { task.attempt < 3 ? 'retry' : 'terminate' }
-    maxRetries = 2
+    errorStrategy = { task.attempt < 3 ? 'retry' : 'ignore' }
 
     withName:
     "TBREFINE" {
