--- a/conf/conda.config
+++ b/conf/conda.config
@@ -1,6 +1,10 @@
+params {
+    conda_envs_location = "${projectDir}/conda_envs"
+}
+
 process {
     withName:
-    ".*" {
-        conda = 'bioconda::mtbseq=1.0.3 bioconda/linux-64::gatk=3.8.0 bioconda::fastqc=0.11.9 bioconda::multiqc=1.9'
+    '.*' {
+        conda = "${params.conda_envs_location}/mtbseq-nf-env"
     }
 }
