--- a/conda_envs/mtbseq-nf-env.yml
+++ b/conda_envs/mtbseq-nf-env.yml
@@ -7,3 +7,5 @@ dependencies:
   - bioconda/linux-64::gatk=3.8.0
   - bioconda::fastqc=0.11.9
   - bioconda::multiqc=1.9
+  - conda-forge::wget=1.2
+  - conda-forge::tar=1.34
