using the mtbseq container on `DOWNLOAD_GATK_JAR` process

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -18,6 +18,6 @@ process {
 
     withName:
     'DOWNLOAD_GATK_JAR' {
-        container = 'alpine:3.14'
+        container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
     }
 }
