--- a/conda_envs/mtbseq-nf-env.yml
+++ b/conda_envs/mtbseq-nf-env.yml
@@ -4,6 +4,6 @@ channels:
   - bioconda
 dependencies:
   - bioconda::mtbseq=1.0.3
-  - bioconda/linux-64::gatk=3.8.0
+  - bioconda/linux-64::gatk=3.8.0=py36_0
   - bioconda::fastqc=0.11.9
   - bioconda::multiqc=1.9
