- Promote QC to main workflow - Deprecate sra support (point to fetchngs) - Move default_params - Rename batch -> normal analysis - Make parallel the default analysis

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,12 +1,12 @@
 manifest {
     name = 'MTBseq-nf'
-    description = 'MTBSeq packaged as a Nextflow Workflow for usability and sensible defaults'
+    description = 'MTBSeq-nf is MTBSeq with sensible defaults and parallel analysis mode.'
     version = '1.0.0'
-    author = 'Emilyn Costa Conceição <emilyncosta@gmail.com>; Abhinav Sharma <abhi18av@outlook.com>;  Davi Josué Marcon <davijosuemarcon@gmail.com>'
+    author = 'Abhinav Sharma <abhi18av@outlook.com>; Davi Josué Marcon <davijosuemarcon@gmail.com>; Emilyn Costa Conceição <emilyncosta@gmail.com>; Hanno Loubser <jloubser@sun.ac.za>'
     mainScript = 'main.nf'
 }
 
-params { includeConfig 'conf/global_params.config' }
+params { includeConfig 'default_params.config' }
 
 profiles {
     standard { includeConfig 'conf/standard.config' }
