improve the defaults

--- a/default_params.config
+++ b/default_params.config
@@ -21,6 +21,11 @@ cohort_tsv = "${params.project}_cohort.tsv"
 
 gatk38_jar = "${projectDir}/resources/GenomeAnalysisTK-3.8-0-ge9d806836/GenomeAnalysisTK.jar"
 
+//-------------------------------------
+// Default publication settings for all processes
+// These can be overridden at process level
+//-------------------------------------
+
 save_mode = 'copy'
 should_publish = true
 
