--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 manifest {
     name = 'MTBseq-nf'
-    description = 'MTBSeq-nf is MTBSeq with sensible defaults and parallel analysis mode.'
+    description = 'MTBseq-nf is MTBseq with sensible defaults and parallel analysis mode.'
     version = '1.0.0'
     author = 'Abhinav Sharma <abhi18av@outlook.com>; Davi Josué Marcon <davijosuemarcon@gmail.com>; Emilyn Costa Conceição <emilyncosta@gmail.com>; Hanno Loubser <jloubser@sun.ac.za>'
     mainScript = 'main.nf'
@@ -8,6 +8,7 @@ manifest {
 
 params { includeConfig 'default_params.config' }
 
+// HARDWARE profiles
 profiles {
     standard { includeConfig 'conf/standard.config' }
     stub { includeConfig 'conf/stub.config' }
