using our custom container by default

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -3,17 +3,17 @@ docker.enabled = true
 process {
     withName:
     "TB.*" {
-        container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
+        container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.5'
     }
 
     withName:
     'FASTQC.*' {
-        container = 'quay.io/biocontainers/fastqc:0.11.9--0'
+        container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.5'
     }
 
     withName:
     'MULTIQC.*' {
-        container = 'quay.io/biocontainers/multiqc:1.9--pyh9f0ad1d_0'
+        container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.5'
     }
 
 }
