--- a/conf/docker.config
+++ b/conf/docker.config
@@ -1,19 +1,3 @@
 docker.enabled = true
 
-process {
-    withName:
-    "TB.*" {
-        container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.5'
-    }
-
-    withName:
-    'FASTQC.*' {
-        container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.5'
-    }
-
-    withName:
-    'MULTIQC.*' {
-        container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.5'
-    }
-
-}
+process.container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.5'
