Make the dockerfile linter happy

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,12 +1,12 @@
 FROM mambaorg/micromamba
-MAINTAINER Abhinav Sharma <abhi18av@outlook.com>
 
+# The conda env file has been copied via the build script
 COPY --chown=$MAMBA_USER:$MAMBA_USER mtbseq-nf-env.yml /tmp/mtbseq-nf-env.yml
 
 RUN micromamba install -y -f /tmp/mtbseq-nf-env.yml -n base
 
 RUN micromamba install -y -n base conda-forge::procps-ng  \
-   && micromamba clean -a -y
+  && micromamba clean -a -y
 
 COPY --chown=$MAMBA_USER:$MAMBA_USER GenomeAnalysisTK.jar /tmp/GenomeAnalysisTK.jar
 
