update process formatting and restructure qc workflow location

--- a/default_params.config
+++ b/default_params.config
@@ -106,7 +106,7 @@ categories = "${projectDir}/data/references/cat/MTB_Gene_Categories.txt"
 // This OPTION specifies a file for base quality recalibration. The list must be in VCF format and should contain known SNPs.
 basecalib = "${projectDir}/data/references/res/MTB_Base_Calibration_List.vcf"
 
-
+//TODO: Refactor this section to rely upon the withName selectors
 // Module level parameters
 TBBWA {
     results_dir = "${params.outdir}/tbbwa"
