Improvements to the design and defaults (#74)
* add temp singularity conf

* - Promote QC to main workflow
- Deprecate sra support (point to fetchngs)
- Move default_params
- Rename batch -> normal analysis
- Make parallel the default analysis

* improve the defaults

* remove the params folder

* add the mechanism to build custom container

* remove the extra env file

* bundle the jar in custom container

* build and push the container

* remove the copied file from dir

* updating `build.sh` to register image on github container registry

* renaming build container

* using our custom container by default

* updating `setup_conda_envs` and `build_and_publish`

* Update conda_envs/setup_conda_envs.sh

* trim the extra config files and fix new docker container references/build

* Make the dockerfile linter happy

* update process formatting and restructure qc workflow location

* tweak the intended csv structure

Co-authored-by: Davi Marcon (@mxrcon) <davijosuemarcon@gmail.com>

--- a/default_params.config
+++ b/default_params.config
@@ -1,25 +1,18 @@
-// NCBI API key
-ncbi_api_key = ""
+run_type = "folder" // OR "samplesheet"
 
-genomeIds = ["ERR841438", "ERR841440"]
-
-run_type = "local" // OR "sra" OR "samplesheet"
+input_folder = "fastqs/*_{1,2}*fastq.gz"
 
 input_samplesheet = "${projectDir}/samplesheet.csv"
 
-reads = "data/full_data/*_{R1,R2}*fastq.gz"
+parallel = false
 
-//NOTE: Change the default to "parallel" after testing is done
-analysis_mode = "batch" // OR "parallel"
-
-library_name = "lib"
+library_name = "illumina"
 
 outdir = "results"
 
-
 user = "root"
 
-project = "prj"
+project = "mtbseqnf"
 
 // This can be customized for scenarios where the software binaries are dumped in a specific path and it isn't possible to use conda.
 mtbseq_path = "MTBseq"
@@ -27,6 +20,19 @@ mtbseq_path = "MTBseq"
 cohort_tsv = "${params.project}_cohort.tsv"
 
 gatk38_jar = "${projectDir}/resources/GenomeAnalysisTK-3.8-0-ge9d806836/GenomeAnalysisTK.jar"
+
+//-------------------------------------
+// Default publication settings for all processes
+// These can be overridden at process level
+//-------------------------------------
+
+save_mode = 'copy'
+should_publish = true
+
+
+//-------------------------------------
+// OPTIONS FROM MTBSEQ MANUAL
+//-------------------------------------
 
 //NOTE: Setting this OPTION will skip all filtering steps and report the calculated information for all positions in the input file.
 // The all_vars only needs to be activated in MTBseq. But in mtbseq-nf we'll specify it as false
@@ -100,15 +106,10 @@ categories = "${projectDir}/data/references/cat/MTB_Gene_Categories.txt"
 // This OPTION specifies a file for base quality recalibration. The list must be in VCF format and should contain known SNPs.
 basecalib = "${projectDir}/data/references/res/MTB_Base_Calibration_List.vcf"
 
-skip_qc =  false
-
-
-
+//TODO: Refactor this section to rely upon the withName selectors
 // Module level parameters
 TBBWA {
     results_dir = "${params.outdir}/tbbwa"
-    save_mode = 'copy'
-    should_publish = true
 
     // cpus = params.threads
 
@@ -122,8 +123,6 @@ TBBWA {
 
 TBREFINE {
     results_dir = "${params.outdir}/tbrefine"
-    save_mode = 'copy'
-    should_publish = true
 
     // cpus = params.threads
 
@@ -138,8 +137,6 @@ TBREFINE {
 
 TBPILE {
     results_dir = "${params.outdir}/tbpile"
-    save_mode = 'copy'
-    should_publish = true
 
     // cpus = params.threads
 
@@ -155,8 +152,6 @@ TBPILE {
 
 TBLIST {
     results_dir = "${params.outdir}/tblist"
-    save_mode = 'copy'
-    should_publish = true
 
     // cpus = params.threads
 
@@ -173,8 +168,6 @@ TBLIST {
 
 TBVARIANTS {
     results_dir = "${params.outdir}/tbvariants"
-    save_mode = 'copy'
-    should_publish = true
 
     // all_vars = params.all_vars
     // snp_vars = params.snp_vars
@@ -195,11 +188,8 @@ TBVARIANTS {
 
 TBSTATS {
     results_dir = "${params.outdir}/tbstats"
-    project = params.project
-    save_mode = 'copy'
-    should_publish = true
 
-
+    // project = params.project
     // all_vars = params.all_vars
     // snp_vars = params.snp_vars
     // lowfreq_vars = params.lowfreq_vars
@@ -219,10 +209,8 @@ TBSTATS {
 
 TBJOIN {
     results_dir = "${params.outdir}/tbjoin"
-    save_mode = 'copy'
-    should_publish = true
-    project = params.project
 
+    // project = params.project
     // all_vars = params.all_vars
     // snp_vars = params.snp_vars
     // lowfreq_vars = params.lowfreq_vars
@@ -243,11 +231,8 @@ TBJOIN {
 
 TBSTRAINS {
     results_dir = "${params.outdir}/tbstrains"
-    save_mode = 'copy'
-    should_publish = true
-    project = params.project
 
-
+    // project = params.project
     // all_vars = params.all_vars
     // snp_vars = params.snp_vars
     // lowfreq_vars = params.lowfreq_vars
@@ -269,9 +254,6 @@ TBSTRAINS {
 
 TBAMEND {
     results_dir = "${params.outdir}/tbamend"
-    save_mode = 'copy'
-    should_publish = true
-
 
     // window = params.window
     // unambig = params.unambig
@@ -290,10 +272,8 @@ TBAMEND {
 
 TBGROUPS {
     results_dir = "${params.outdir}/tbgroups"
-    save_mode = 'copy'
-    should_publish = true
-    project = params.project
 
+    // project = params.project
     // distance = params.distance
 
     // // ref = params.ref
@@ -307,8 +287,6 @@ TBGROUPS {
 
 TBFULL {
     results_dir = "${params.outdir}/tbfull"
-    save_mode = 'copy'
-    should_publish = true
 
     // minbqual = params.minbqual
     // mincovf = params.mincovf
@@ -331,18 +309,12 @@ TBFULL {
 
 RENAME_FILES {
     results_dir = "${params.outdir}/rename_files"
-    save_mode = 'copy'
-    should_publish = true
 }
 
 FASTQC {
     results_dir = "${params.outdir}/fastqc"
-    save_mode = 'copy'
-    should_publish = true
 }
 
 MULTIQC {
     results_dir = "${params.outdir}/multiqc"
-    save_mode = 'copy'
-    should_publish = true
 }
