--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,14 @@
 manifest {
     name = 'MTBseq-nf'
-    description = 'MTBSeq packaged as a Nextflow Workflow for usability and sensible defaults'
+    description = 'MTBseq-nf is MTBseq with sensible defaults and parallel analysis mode.'
     version = '1.0.0'
-    author = 'Emilyn Costa Conceição <emilyncosta@gmail.com>; Abhinav Sharma <abhi18av@outlook.com>;  Davi Josué Marcon <davijosuemarcon@gmail.com>'
+    author = 'Abhinav Sharma <abhi18av@outlook.com>; Davi Josué Marcon <davijosuemarcon@gmail.com>; Emilyn Costa Conceição <emilyncosta@gmail.com>; Hanno Loubser <jloubser@sun.ac.za>'
     mainScript = 'main.nf'
 }
 
-params { includeConfig 'conf/global_params.config' }
+params { includeConfig 'default_params.config' }
 
+// HARDWARE profiles
 profiles {
     standard { includeConfig 'conf/standard.config' }
     stub { includeConfig 'conf/stub.config' }
