fix naming and param issues

--- a/default_params.config
+++ b/default_params.config
@@ -1,14 +1,16 @@
 run_type = "folder" // OR "samplesheet"
 
-input_folder = "fastqs/*_{1,2}*fastq.gz"
+input_fastqs_folder = false // "fastqs/*_{1,2}*fastq.gz"
 
 input_samplesheet = "${projectDir}/samplesheet.csv"
+
+only_qc = false
 
 parallel = false
 
 library_name = "illumina"
 
-outdir = "results"
+outdir = "MTBseq-nf-results"
 
 user = "root"
 
