Tweak the conda-env and container build file

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,13 +1,10 @@
-FROM mambaorg/micromamba
+FROM mambaorg/micromamba:0.25.1
 
-# The conda env file has been copied via the build script
+#NOTE: The conda env file has been copied via the build script
 COPY --chown=$MAMBA_USER:$MAMBA_USER mtbseq-nf-env.yml /tmp/mtbseq-nf-env.yml
 
-RUN micromamba install -y -f /tmp/mtbseq-nf-env.yml -n base
+RUN micromamba create -n mtbseq-nf-env
 
-RUN micromamba install -y -n base conda-forge::procps-ng  \
-  && micromamba clean -a -y
+RUN micromamba install -y -n mtbseq-nf-env -f /tmp/mtbseq-nf-env.yml && micromamba clean -a -y
 
-COPY --chown=$MAMBA_USER:$MAMBA_USER GenomeAnalysisTK.jar /tmp/GenomeAnalysisTK.jar
-
-RUN /opt/conda/bin/gatk-register /tmp/GenomeAnalysisTK.jar
+ENV PATH /opt/conda/envs/mtbseq-nf-env/bin:$PATH
