--- a/conda_envs/mtbseq-nf-env.yml
+++ b/conda_envs/mtbseq-nf-env.yml
@@ -7,3 +7,4 @@ dependencies:
   - bioconda/linux-64::gatk=3.8.0=py36_0
   - bioconda::fastqc=0.11.9
   - bioconda::multiqc=1.12
+  - conda-forge::procps-ng=4.0.0
