--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -8,3 +8,7 @@ RUN micromamba create -n mtbseq-nf-env
 RUN micromamba install -y -n mtbseq-nf-env -f /tmp/mtbseq-nf-env.yml && micromamba clean -a -y
 
 ENV PATH /opt/conda/envs/mtbseq-nf-env/bin:$PATH
+
+COPY --chown=$MAMBA_USER:$MAMBA_USER GenomeAnalysisTK.jar /tmp/GenomeAnalysisTK.jar
+
+RUN /opt/conda/bin/gatk-register /tmp/GenomeAnalysisTK.jar
