restructure contribution order

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ manifest {
     name = 'MTBseq-nf'
     description = 'MTBseq-nf is MTBseq with sensible defaults and parallel analysis mode.'
     version = '0.9.7'
-    author = 'Abhinav Sharma <abhi18av@outlook.com>; Davi Josué Marcon <davijosuemarcon@gmail.com>; Emilyn Costa Conceição <emilyncosta@gmail.com>; Hanno Loubser <jloubser@sun.ac.za>'
+    author = Davi Josué Marcon <davijosuemarcon@gmail.com>; Emilyn Costa Conceição <emilyncosta@sun.ac.za>; Hanno Loubser <jloubser@sun.ac.za>; 'Abhinav Sharma <abhi18av@outlook.com>'
     mainScript = 'main.nf'
 }
 
