--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ manifest {
     name = 'MTBseq-nf'
     description = 'MTBseq-nf is MTBseq with sensible defaults and parallel analysis mode.'
     version = '1.0.0'
-    author = 'Abhinav Sharma <abhi18av@outlook.com>; Davi Josué Marcon <davijosuemarcon@gmail.com>; Emilyn Costa Conceição <emilyncosta@gmail.com>; Hanno Loubser <jloubser@sun.ac.za>'
+    author = '@abhi18av; @Mxrcon; @jloubser; @emilyncosta'
     mainScript = 'main.nf'
 }
 
