conditionally load the gatk48_jar

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -1,3 +1,5 @@
 docker.enabled = true
 
-process.container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.6'
+params.load_gatk38_jar = false
+
+process.container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.7'
