--- a/default_params.config
+++ b/default_params.config
@@ -21,6 +21,9 @@ cohort_tsv = "${params.project}_cohort.tsv"
 
 gatk38_jar = "${projectDir}/resources/GenomeAnalysisTK-3.8-0-ge9d806836/GenomeAnalysisTK.jar"
 
+//NOTE: This variable is activate or deactived within the hardware specific profile
+load_gatk38_jar = true
+
 //-------------------------------------
 // Default publication settings for all processes
 // These can be overridden at process level
