--- a/conf/singularity.config
+++ b/conf/singularity.config
@@ -1,3 +1,3 @@
 singulariy.enabled = true
-
-process.container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.6'
+params.load_gatk38_jar = false
+process.container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.7'
