use the mount options

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -1,3 +1,6 @@
-docker.enabled = true
+docker {
+    enabled = true
+    runOptions = '-u $(id -u):$(id -g)'
+}
 
 process.container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.7'
