usind sed to rename the pipeline accordingly

--- a/conf/test.config
+++ b/conf/test.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run mtbseq-nf/mtbseqnf -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run mycobactopia-org/MTBseq-nf -profile test,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
