--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    mtbseq-nf/mtbseqnf Nextflow config file
+    mycobactopia-org/MTBseq-nf Nextflow config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -62,7 +62,7 @@ try {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
-// Load mtbseq-nf/mtbseqnf custom profiles from different institutions.
+// Load mycobactopia-org/MTBseq-nf custom profiles from different institutions.
 // Warning: Uncomment only if a pipeline-specific institutional config already exists on nf-core/configs!
 // try {
 //   includeConfig "${params.custom_config_base}/pipeline/mtbseqnf.config"
@@ -214,9 +214,9 @@ dag {
 }
 
 manifest {
-    name            = 'mtbseq-nf/mtbseqnf'
+    name            = 'mycobactopia-org/MTBseq-nf'
     author          = """Abhinav Sharma (@abhi18av) and Davi Marcon (@mxrcon)"""
-    homePage        = 'https://github.com/mtbseq-nf/mtbseqnf'
+    homePage        = 'https://github.com/mycobactopia-org/MTBseq-nf'
     description     = """`MTBseq-nf` pipeline makes [MTBseq](https://github.com/ngs-fzb/MTBseq_source) simple and easy to use via [Nextflow](https://www.nextflow.io/) workflow manager."""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
