add container option

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -39,4 +39,10 @@ process {
         ]
     }
 
+    withName: 'TB*' {
+        container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.7'
+
+    }
+
+
 }
