fix config regex for tb processes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -39,7 +39,7 @@ process {
         ]
     }
 
-    withName: 'TB*' {
+    withName: '*TB*' {
         container = 'ghcr.io/mtb-bioinformatics/mtbseq-nf:0.9.7'
 
     }
