using biocontainers and removing custom container version

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -40,7 +40,7 @@ process {
     }
 
     withName: '.*TB.*' {
-        container = 'ghcr.io/mycobactopia-org/mtbseq-nf:0.9.7'
+        container = 'quay.io/biocontainers/mtbseq:1.1.0--hdfd78af_0'
 
     }
 
