--- a/conf/modules.config
+++ b/conf/modules.config
@@ -43,6 +43,12 @@ process {
         container = 'quay.io/biocontainers/mtbseq:1.1.0--hdfd78af_0'
 
     }
+    withName: 'TBFULL' {
+        cpus   = { check_max( 32    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 72.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 24.h  * task.attempt, 'time'    ) }
+    }
+
 
 
 }
