--- a/conf/base.config
+++ b/conf/base.config
@@ -32,19 +32,24 @@ process {
         time   = { check_max( 4.h  * task.attempt, 'time'    ) }
     }
     withLabel:process_low {
-        cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
+        cpus   = { check_max( 2    * task.attempt, 'cpus'    ) }
         memory = { check_max( 8.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 4.h   * task.attempt, 'time'    ) }
     }
     withLabel:process_medium {
         cpus   = { check_max( 6     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 12.GB * task.attempt, 'memory'  ) }
+        memory = { check_max( 10.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 8.h   * task.attempt, 'time'    ) }
     }
     withLabel:process_high {
-        cpus   = { check_max( 16    * task.attempt, 'cpus'    ) }
-        memory = { check_max( 32.GB * task.attempt, 'memory'  ) }
+        cpus   = { check_max( 12    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 20.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
+    }
+    withLabel:process_max {
+        cpus = params.max_cpus
+        memory = params.max_memory
+        time = params.max_time
     }
     withLabel:process_long {
         time   = { check_max( 20.h  * task.attempt, 'time'    ) }
