itereation on tbpile after first benchmark

--- a/conf/base.config
+++ b/conf/base.config
@@ -31,6 +31,11 @@ process {
         memory = { check_max( 6.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 4.h  * task.attempt, 'time'    ) }
     }
+    withLabel:process_single_high_memory {
+        cpus = 1
+        memory = { check_max( 16.GB * task.attempt, 'memory' ) }
+        time   = { check_max( 4.h  * task.attempt, 'time'    ) }
+    }
     withLabel:process_low {
         cpus   = { check_max( 2    * task.attempt, 'cpus'    ) }
         memory = { check_max( 8.GB * task.attempt, 'memory'  ) }
