Modifications after extensively iterations on Virtual Machine (#86)
* reformat reads input handling

* dev-iteration on input handling

* Revert "reformat reads input handling"

This reverts commit 311be5acf8ef1c96d2683dd6e46bd9bc07132b77.

* fix container configurations

* make tbfull use more cpus than a normal process

* fix genome name handling on cohor analysis

* replace cohort sample generation by the same used on normal analysis

* tweak input name on cohort analysis

* iterate around sample tsv file generation

* replace reads_ch by genome_names

* testing if adding `$` will fix the genome_names error

* use meta.id instead of it

* Revert "use meta.id instead of it"

This reverts commit 2c9a4e849627b47f15a1e22e6f327c9b1f14164c.

* remove stilystic change

* Accommodating the new `QC` workflow

* Accommodate `REPORT` workflow and import MTBSEQ_NF on the main workflow

* remove version collection from mtbseq modules

* remove unecessary comment on main.nf

* fix module importation on qc and report

* fix typo in report workflow

* comment run main workflow

* fix QC.out.ch_versions

* move includes to the report subworkflow

* tweak on includes

* early optimization before benchmark

* emit multiqc_report on mtbseqnf

* implement base labels before benchmark

* itereation on tbpile after first benchmark

* implement optimization after first benchmark

* tweak the labels [ci skip]

---------

Co-authored-by: Abhinav Sharma <abhi18av@gmail.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -39,10 +39,7 @@ process {
         ]
     }
 
-    withName: '.*TB.*' {
+    withName: 'TBAMEND|TBBWA|TBFULL|TBGROUPS|TBJOIN|TBLIST|TBPILE|TBREFINE|TBSTATS|TBSTRAINS|TBVARIANTS' {
         container = 'quay.io/biocontainers/mtbseq:1.1.0--hdfd78af_0'
-
     }
-
-
 }
