--- a/assets/multiqc_config.yml
+++ b/assets/multiqc_config.yml
@@ -24,7 +24,75 @@ custom_data:
     pconfig:
       id: 'strain_classification'
       namespace: "strain classification"
-      scale: false
+      conditional_formatting:
+        "Homolka lineage":
+          rules:
+            - condition: "value.startswith('1')"
+              color: "#FF0000"
+            - condition: "value.startswith('2')"
+              color: "#FFA500"
+            - condition: "value.startswith('3')"
+              color: "#FFFF00" 
+            - condition: "value.startswith('4')"
+              color: "#008000"
+            - condition: "value.startswith('5')"
+              color: "#0000FF"
+            - condition: "value.startswith('6')"
+              color: "#4B0082"
+            - condition: "value.startswith('7')"
+              color: "#EE82EE"
+            - condition: "value.startswith('8')"
+              color: "#A52A2A"
+            - condition: "value.startswith('9')"
+              color: "#00FFFF"
+            - condition: "value.startswith('10')"
+              color: "#FFC0CB"
+        "Coll lineage (branch)":
+          rules:
+            - condition: "value.startswith('1')"
+              color: "#FF0000"
+            - condition: "value.startswith('2')"
+              color: "#FFA500"
+            - condition: "value.startswith('3')"
+              color: "#FFFF00" 
+            - condition: "value.startswith('4')"
+              color: "#008000"
+            - condition: "value.startswith('5')"
+              color: "#0000FF"
+            - condition: "value.startswith('6')"
+              color: "#4B0082"
+            - condition: "value.startswith('7')"
+              color: "#EE82EE"
+            - condition: "value.startswith('8')"
+              color: "#A52A2A"
+            - condition: "value.startswith('9')"
+              color: "#00FFFF"
+            - condition: "value.startswith('10')"
+              color: "#FFC0CB"
+        "Beijing quality (easy)":
+          rules:
+            - condition: "value == 'good'"
+              color: "#00FF00"
+            - condition: "value == 'bad'"
+              color: "#FF0000"
+        "Coll quality (easy)"":
+          rules:
+            - condition: "value == 'good'"
+              color: "#00FF00"
+            - condition: "value == 'bad'"
+              color: "#FF0000"
+        "Coll quality (branch)"":
+          rules:
+            - condition: "value == 'good'"
+              color: "#00FF00"
+            - condition: "value == 'bad'"
+              color: "#FF0000"
+        "Quality":
+          rules:
+            - condition: "value == 'good'"
+              color: "#00FF00"
+            - condition: "value == 'bad'"
+              color: "#FF0000"
 
   mapping_statistics:
     section_name: 'Mapping and Variant Statistics'
