--- a/nextflow.config
+++ b/nextflow.config
@@ -166,6 +166,7 @@ profiles {
         executor.memory        = 8.GB
     }
     test      { includeConfig 'conf/test.config'      }
+    test_stub { includeConfig 'conf/test_stub.config' }
     test_full { includeConfig 'conf/test_full.config' }
 }
 
