--- a/conf/test_stub.config
+++ b/conf/test_stub.config
@@ -22,7 +22,7 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = '/data/input_samplesheet.csv'
+    input  = "${launchDir}/data/mock_data/input_samplesheet.csv"
 
 
 }
