--- a/conf/test.config
+++ b/conf/test.config
@@ -22,7 +22,7 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = "${launchDir}/data/test_data/test_3_samples.csv"
+    input  = "${projectDir}/data/test_data/test_3_samples.csv"
 
 
 }
