--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -21,4 +21,6 @@ params {
 
     // Fasta references
     fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/genome/NC_045512.2/GCF_009858895.2_ASM985889v3_genomic.200409.fna.gz'
+
+    input  = "${launchDir}/data/10samples.csv"
 }
