--- a/assets/multiqc_config.yml
+++ b/assets/multiqc_config.yml
@@ -14,7 +14,15 @@ export_plots: true
 disable_version_detection: true
 
 run_modules:
+  - fastqc
   - custom_content
+
+
+## Module order
+top_modules:
+  - "fastqc"
+  - custom_content
+
 
 custom_data:
   strain_classification:
