--- a/conf/test_stub.config
+++ b/conf/test_stub.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Nextflow config file for running minimal tests
+    Nextflow config file for stubs
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Defines input files and everything required to run a fast and simple pipeline test.
 
@@ -15,14 +15,14 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 8
-    max_memory = '16.GB'
-    max_time   = '8.h'
+    max_cpus   = 2
+    max_memory = '6.GB'
+    max_time   = '6.h'
 
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = "${projectDir}/data/test_data/test_3_samples.csv"
+    input  = "${projectDir}/data/mock_data/input_samplesheet.csv"
 
 
 }
