use custom process label for tbfull [ci skip]

--- a/conf/base.config
+++ b/conf/base.config
@@ -54,8 +54,10 @@ process {
     withLabel:process_long {
         time   = { check_max( 20.h  * task.attempt, 'time'    ) }
     }
-    withLabel:process_high_memory {
+    withLabel:process_tbfull {
+        cpus   = 8
         memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+        time   = { check_max( 336.h  * task.attempt, 'time'    ) }
     }
     withLabel:error_ignore {
         errorStrategy = 'ignore'
