disable the publication of renamed files [ci skip]

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -30,6 +30,17 @@ process {
         ]
     }
 
+
+    withName: RENAME_FILES {
+        publishDir = [
+            path: { "${params.outdir}/rename_files" },
+            mode: params.publish_dir_mode,
+            enabled: false
+        ]
+    }
+
+
+
     withName: 'MULTIQC' {
         ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
         publishDir = [
