--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -17,10 +17,9 @@ params {
     // Input data for full size test
     // TODO nf-core: Specify the paths to your full test data ( on nf-core/test-datasets or directly in repositories, e.g. SRA)
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input = "${launchDir}/data/test_data/test_10_samples.csv"
+    input = "${projectDir}/data/test_data/test_10_samples.csv"
 
-    // Fasta references
-    fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/genome/NC_045512.2/GCF_009858895.2_ASM985889v3_genomic.200409.fna.gz'
+    output = "test-full-profile-results"
 
-    input  = "${launchDir}/data/10samples.csv"
+
 }
