Add library parameter to samplesheet  (#88)
* adding library parameter to the samplesheet for normal mode and parallel mode

* update test_10 samples input samplesheet

* substitute params.library_name by meta.library

* add default outdir [ci skip]

* relabel tbfull [ci skip]

* remove custom process_max label [ci skip]

* add retry label [ci skip]

* remove the requirement of library field from tbfull [ci skip]

* use custom process label for tbfull [ci skip]

* update the pipeline schema

* disable the publication of renamed files [ci skip]

---------

Co-authored-by: Abhinav Sharma <abhi18av@users.noreply.github.com>
Co-authored-by: Abhinav Sharma <abhi18av@outlook.com>

--- a/conf/base.config
+++ b/conf/base.config
@@ -51,16 +51,13 @@ process {
         memory = { check_max( 20.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
     }
-    withLabel:process_max {
-        cpus = params.max_cpus
-        memory = params.max_memory
-        time = params.max_time
-    }
     withLabel:process_long {
         time   = { check_max( 20.h  * task.attempt, 'time'    ) }
     }
-    withLabel:process_high_memory {
+    withLabel:process_tbfull {
+        cpus   = 8
         memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+        time   = { check_max( 336.h  * task.attempt, 'time'    ) }
     }
     withLabel:error_ignore {
         errorStrategy = 'ignore'
