--- a/conf/test_publication.config
+++ b/conf/test_publication.config
@@ -1,28 +1,29 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Nextflow config file for stubs
+    Nextflow config file for publication
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run mycobactopia-org/MTBseq-nf -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run mycobactopia-org/MTBseq-nf -profile test_publication,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
 
 params {
-    config_profile_name        = 'Test profile'
-    config_profile_description = 'Minimal test dataset to check pipeline function'
+    config_profile_name        = 'Test profile for publication'
+    config_profile_description = 'Test dataset used for publication'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = '6.GB'
-    max_time   = '6.h'
+    max_cpus   = 30
+    max_memory = '60.GB'
+    max_time   = '300.h'
 
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = "${projectDir}/data/mock_data/input_samplesheet.csv"
+    input  = "${projectDir}/data/test_data/input_publication.csv"
 
 
+    output = "test-publication-profile-results"
 }
