--- a/nextflow.config
+++ b/nextflow.config
@@ -166,8 +166,8 @@ profiles {
         executor.memory        = 8.GB
     }
     test      { includeConfig 'conf/test.config'      }
-    test_stub { includeConfig 'conf/test_stub.config' }
     test_full { includeConfig 'conf/test_full.config' }
+    test_publication { includeConfig 'conf/test_publication.config' }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
