fix default outdir names [ci skip]

--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -19,6 +19,6 @@ params {
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
     input = "${projectDir}/data/test_data/test_10_samples.csv"
 
-    output = "test-full-profile-results"
+    outdir = "test-full-profile-results"
 
 }
