--- a/conf/test_publication.config
+++ b/conf/test_publication.config
@@ -25,5 +25,5 @@ params {
     input  = "${projectDir}/data/test_data/input_publication.csv"
 
 
-    output = "test-publication-profile-results"
+    outdir = "test-publication-profile-results"
 }
