--- a/conf/test.config
+++ b/conf/test.config
@@ -24,7 +24,7 @@ params {
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
     input  = "${projectDir}/data/test_data/test_3_samples.csv"
 
-    output = "test-profile-results"
+    outdir = "test-profile-results"
 
 
 }
